[package]
name = "growable"
description = "A growable, reusable box for Rust."
version = "0.5.0"
authors = ["Eugene Palmoff <mahou@shoujo.pw>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/mahou-shoujo/growable-rs.git"
homepage = "https://github.com/mahou-shoujo/growable-rs.git"
documentation = "https://mahou-shoujo.github.io/growable-rs/growable/index.html"
readme = "README.md"
categories = ["data-structures", "memory-management", "rust-patterns"]
keywords = ["allocation", "box", "memory", "pool", "reuse"]
